--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,11 +78,14 @@ spack:centos7:
         - $LAUNCHER $spack mirror add local $PWD/spack-cache
         - $LAUNCHER $spack buildcache list
     script:
+        - TRACK="Experimental"
+        - if [ "$CI_PIPELINE_SOURCE" == "schedule" ] && [ "$CI_PROJECT_PATH" == "paraview/paraview" ]; then TRACK="master-packages" ; fi
+        - if [ "$CI_MERGE_REQUEST_PROJECT_PATH" == "paraview/paraview" ]; then TRACK="merge-requests" ; fi
         - $LAUNCHER $spack spec $paraview_spec
         - $LAUNCHER $spack install --no-check-signature --only dependencies -j $(nproc) $paraview_spec
         - export dependency_specs=`$LAUNCHER $spack find --format "{name}{@version}{%compiler}"`
         - $LAUNCHER $spack buildcache create -a -f -u -d $PWD/spack-cache $dependency_specs
-        - $LAUNCHER $spack install --no-check-signature -j $(nproc) $paraview_spec
+        - $LAUNCHER $spack install --no-check-signature -j $(nproc) --cdash-upload-url="http://open.cdash.org/submit.php?project=ParaView" --cdash-track $TRACK --cdash-build="paraview-spack-$CI_COMMIT_REF_NAME" $paraview_spec
         - eval `$spack load --sh paraview`
         - pvserver --version
         - .gitlab/sccache --show-stats
