Added new 'Simplify Polyhedral Cells' filter

--- a/VTKExtensions/FiltersGeneral/CMakeLists.txt
+++ b/VTKExtensions/FiltersGeneral/CMakeLists.txt
@@ -32,6 +32,7 @@ set(classes
   vtkCellIntegrator
   vtkCleanUnstructuredGrid
   vtkCleanUnstructuredGridCells
+  vtkConvertPolyhedraFilter
   vtkEquivalenceSet
   vtkExtractScatterPlot
   vtkFlashContour
