Remove Cinema Image Extracts writer.
Cinema Image Extract writers no longer needed. See #20111 for the new
design.

--- a/Remoting/Cinema/CMakeLists.txt
+++ b/Remoting/Cinema/CMakeLists.txt
@@ -34,12 +34,10 @@ set(classes
   vtkCinemaLayerMapper
   vtkCinemaLayerRepresentation
   vtkPVCinemaDatabaseInformation
-  vtkSMCinemaDatabaseImporter
-  vtkSMCinemaExtractWriterProxy)
+  vtkSMCinemaDatabaseImporter)
 
 vtk_module_add_module(ParaView::RemotingCinema
   CLASSES ${classes})
 
 paraview_add_server_manager_xmls(
-  XMLS  "Resources/cinema_readers.xml"
-        "Resources/extractors_remotingcinema.xml")
+  XMLS  "Resources/cinema_readers.xml")
