WaveletMiniApp as data source
Adding a new plugin (wavelet_miniapp_plugin) that can be loaded in
ParaView as a plugin to add a source that acts similar to the
wavelet_miniapp with properties matching those accepted by the miniapp
as command line arguments.

--- a/Wrapping/Python/CMakeLists.txt
+++ b/Wrapping/Python/CMakeLists.txt
@@ -20,6 +20,7 @@ set(python_files
   paraview/demos/export_catalyst_state.py
   paraview/demos/show_grid_as_background.py
   paraview/demos/wavelet_miniapp.py
+  paraview/demos/wavelet_miniapp_plugin.py
   paraview/detail/__init__.py
   paraview/detail/annotation.py
   paraview/detail/calculator.py
