Extract Generator: fixes for symmetric MPI mode.
Includes fixes and cleanups for symmetric MPI mode.

Avoid issues file-system modification calls on all ranks, we only need
to do that on root node, but share result with all ranks when in
symmetric MPI mode. This is now handled by a new class called
vtkSMFileUtilities.

vtkSMExtractsController also reports error (rather than silently
continuing) if any generator fails to write extracts.

--- a/Remoting/ServerManager/CMakeLists.txt
+++ b/Remoting/ServerManager/CMakeLists.txt
@@ -102,6 +102,7 @@ set(classes
   vtkSMExtractWriterProxy
   vtkSMFieldDataDomain
   vtkSMFileListDomain
+  vtkSMFileUtilities
   vtkSMFixedTypeDomain
   vtkSMIdTypeVectorProperty
   vtkSMIndexSelectionDomain
