vtkNetworkImageWriter: write images in either client or server-side
Signed-off-by: Vicente Adolfo Bolea Sanchez <vicente.bolea@kitware.com>

--- a/VTKExtensions/FiltersRendering/CMakeLists.txt
+++ b/VTKExtensions/FiltersRendering/CMakeLists.txt
@@ -41,6 +41,7 @@ set(classes
   vtkMarkSelectedRows
   vtkMPIMoveData
   vtkNetworkImageSource
+  vtkNetworkImageWriter
   vtkOrderedCompositeDistributor
   vtkPVGeometryFilter
   vtkPVRecoverGeometryWireframe
