misc improvements to vtkNetworkImageWriter.
Cleaning up the code to more consistent with VTK style and cleanup minor
issues and leaks.

Also updates the docs.

--- a/VTKExtensions/FiltersRendering/CMakeLists.txt
+++ b/VTKExtensions/FiltersRendering/CMakeLists.txt
@@ -66,4 +66,5 @@ vtk_module_add_module(ParaView::VTKExtensionsFiltersRendering
 
 paraview_add_server_manager_xmls(
   XMLS  Resources/rendering_sources.xml
-        Resources/filters_filtersrendering.xml)
+        Resources/filters_filtersrendering.xml
+        Resources/misc_filtersrendering.xml)
