Write summary table on data-server-root.
vtkSMExtractsController now writes the summary table on the
data-server-root, same location as the extracts.

vtkNetworkImageWriter has been renamed to vtkRemoteWriterHelper to
better reflect its purpose. Also moving the class to
Remoting/ServerManager so we can use it in vtkSMExtractsController.

--- a/Remoting/ServerManager/CMakeLists.txt
+++ b/Remoting/ServerManager/CMakeLists.txt
@@ -30,6 +30,7 @@
 #==========================================================================
 set(classes
   vtkLoadStateOptions
+  vtkRemoteWriterHelper
   vtkPVCatalystChannelInformation
   vtkPVCatalystSessionCore
   vtkPVFilePathEncodingHelper
