--- a/CMake/paraview-config.cmake.in
+++ b/CMake/paraview-config.cmake.in
@@ -58,6 +58,11 @@ endif ()
 unset(_paraview_find_package_args)
 unset(_paraview_use_external_vtk)
 
+# Find Catalyst
+find_package(catalyst REQUIRED QUIET
+    PATHS "${CMAKE_CURRENT_LIST_DIR}/catalyst"
+    NO_DEFAULT_PATH)
+
 set(PARAVIEW_USE_QT "@PARAVIEW_USE_QT@")
 set(PARAVIEW_USE_MPI "@PARAVIEW_USE_MPI@")
 set(PARAVIEW_USE_PYTHON "@PARAVIEW_USE_PYTHON@")
