vtkSMProxyManagerUtilities: misc utilities to scan for proxies
vtkSMProxyManagerUtilities is a new helper class that helps scan for
proxies either using annotations or by scanning for dependencies.

--- a/Remoting/ServerManager/CMakeLists.txt
+++ b/Remoting/ServerManager/CMakeLists.txt
@@ -143,6 +143,7 @@ set(classes
   vtkSMProxyListDomain
   vtkSMProxyLocator
   vtkSMProxyManager
+  vtkSMProxyManagerUtilities
   vtkSMProxyProperty
   vtkSMProxySelectionModel
   vtkSMPSWriterProxy
