--- a/.gitlab/artifacts.yml
+++ b/.gitlab/artifacts.yml
@@ -8,3 +8,34 @@
             - compile_output.log
             - doxygen_output.log
             - prepare_output.log
+
+.cmake_build_artifacts:
+    artifacts:
+        expire_in: 1d
+        paths:
+            # The artifacts of the build.
+            - build/bin/
+            - build/lib/
+
+            # CTest files.
+            - build/CTestCustom*.cmake
+            # XXX(globbing): Can be simplified with support from
+            # https://gitlab.com/gitlab-org/gitlab-runner/issues/4840
+            - build/CTestTestfile.cmake
+            - build/*/CTestTestfile.cmake
+            - build/*/*/CTestTestfile.cmake
+            - build/*/*/*/CTestTestfile.cmake
+            - build/Testing/
+            - build/testing/temporary/
+
+            # CDash files.
+            - build/DartConfiguration.tcl
+
+.cmake_test_artifacts:
+    artifacts:
+        expire_in: 1d
+        # Tests failing should still upload the artifact for further testing.
+        when: always
+        paths:
+            # Debugging logs
+            - build/Testing/Temporary/Last*.log
